# compiler

./: CMakeLists.txt  grammar.md  main  test
.cache/clangd/index/: arena.hpp.21641DD43F7DF4F8.idx  lexer.cpp.79BE7B97D988B615.idx  lexer.hpp.D8A2EEAF0FAE5DD4.idx  main.cpp.7EF9FC90406A80AB.idx  parser.cpp.C8F775B0D8C277D0.idx  parser.hpp.6379B63EF9DFCD10.idx  pratt.cpp.65FA56D9BCEB37C8.idx
.obsidian/: community-plugins.json  hotkeys.json  workspace.json
.obsidian/plugins/obsidian-latex-suite/: data.json
eg/: eg.txt  test.txt
include/: arena.hpp  lexer.hpp  parser.hpp
src/: lexer.cpp  main.cpp  parser.cpp
